--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ footer h3 {
     /* Espacement entre les titres du pied de page */
 }
 
-/* ------------------- Media Queries ------------------- */
+/* ------------------- partie autres appareils ------------------- */
 
 /* Styles pour les écrans de bureau de 1920px et plus */
 @media (min-width: 1920px) {
@@ -330,7 +330,7 @@ footer h3 {
 
     .grid {
         grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
-        /* Colonne de 150px pour les éléments de la grille */
+        /* Colonne de 100px pour les éléments de la grille */
     }
 
     footer {
